--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <!-- navbar -->
     <div class="navbar">
         <div class="container">
-            <div class="logo">Kunal Bandale</div>
+            <div class="logo"><i class="fas fa-code"></i>
+            </div>
             <ul class="nav">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#home">About</a></li>
