--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
     <section class="boxes">
         <div class="container">
             <div class="box">
-                <h2><i class="fas fa-book"></i> Software Engineering</h2>
-                <p>Software engineering is the art of crafting 🖥️ technology solutions through systematic design and development processes. It involves creating robust and efficient software systems 🛠️ that address specific user needs and challenges, while adhering to best practices and principles. Software engineers use creativity and technical expertise to build digital solutions that power our modern world 🌍.</p>
-                <button class="download">coming soon..</button>
+                <h2><i class="fas fa-book"></i> SQL Notes </h2>
+                  <p> Get your hands on comprehensive SQL notes to unlock the power of structured query language. 📚 These notes will guide you through the world of databases 🏢, making you a master in managing and manipulating data. 💻 Don't miss this opportunity to enhance your SQL skills! 🔥 </p>
+                      <a href="https://github.com/kunalbandale/Notes/blob/main/notes/SQL%20notes.pdf" download><button class="download">📥 Download SQL Notes 📥</button> </a>
+
             </div>
             <div class="box">
                 <h2><i class="fas fa-book"></i> Python Programming</h2>
