--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="box">
                 <h2><i class="fas fa-book"></i> SQL Notes </h2>
                   <p> Get your hands on comprehensive SQL notes to unlock the power of structured query language. 📚 These notes will guide you through the world of databases 🏢, making you a master in managing and manipulating data. 💻 Don't miss this opportunity to enhance your SQL skills! 🔥 </p>
-                      <a href="https://github.com/kunalbandale/Notes/blob/main/notes/SQL%20notes.pdf" download><button class="download">📥 Download SQL Notes 📥</button> </a>
+                      <a href="notes/SQL notes.pdf" download><button class="download">📥 Download SQL Notes 📥</button> </a>
 
             </div>
             <div class="box">
