--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="nav">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#home">About</a></li>
-                <li><a href="#home">Contact</a></li>
+                <li><a href="https://www.canva.com/design/DAFuDTdai9Q/A_2s3QycyLzMfnq8Xjamdw/edit?utm_content=DAFuDTdai9Q&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target = "_blank">Seminar-I</a></li>
             </ul>
         </div>
     </div>
